# weed-removal-simulation

install/: local_setup.sh  setup.sh
install/simulation/libsimulation/: diff_drive_publisher
log/: latest_build
name_description/: CMakeLists.txt
name_description/config/: config.rviz
name_description/robot/dynamics/: chassis.xacro  name.xacro  wheel.xacro
name_description/robot/visual/: chassis.xacro  properties.xacro
name_description/scripts/: inverse_kinematics.py
name_gazebo/: package.xml
name_gazebo/launch/: spawn_multiple_with_gazebo.launch.py
name_gazebo/robot/: controller.gazebo.xacro  sensor.gazebo.xacro
name_gazebo/scripts/: turtle_teleop_key_adapter.py
name_ign/: package.xml
name_ign/config/: controller_config.yaml  fleet_info.yaml  global_bridge.yaml
name_ign/launch/: empty_world.launch.py  first_spawn.launch.py  ideal_fleet_spawn_2.launch.py  single_spawn.launch.py  test.launch.py
name_ign/name_ign/: sdf_modifier.py
name_ign/robot/: controller.gazebo.xacro
name_ign/scripts/: dummy_script.py
name_webots/: CMakeLists.txt  package.xml
name_webots/launch/: spawn.launch.py
name_webots/robot/: name.webots.xacro
name_webots/scripts/: obstacle_avoider.py
name_webots/worlds/: my_world.wbt  my_world_ideal.wbt  my_world_multi.wbt
src/simulation/: CMakeLists.txt  package.xml
src/simulation/config/: diff_drive_controller.yaml
src/simulation/launch/: building_robot.launch.py
src/simulation/src/: diff_drive_publisher.cpp
src/simulation/src/worlds/: building_robot.sdf  launchtemp.py
src/wheeled_robot/: CMakeLists.txt
(+83 files in other folders)
